Cleanup and updates

--- a/src/templates/map_def.hbs
+++ b/src/templates/map_def.hbs
@@ -7,6 +7,8 @@ use Drupal\simple_interactive_maps\MapDefinitionPluginBase;
 /**
  * Implements US Map of states and territories.
  *
+ * Generated from US Census Bureau Shapefiles on {{timestamp}}.
+ *
  * @MapDefinition (
  *   id = "{{map_id}}",
  *   label = @Translation("{{map_name}}"),
