Expand to cover counties, Unified School Districts and 118 congressional districts.

--- a/src/templates/map_def_congressional_districts.hbs
+++ b/src/templates/map_def_congressional_districts.hbs
@@ -1,11 +1,11 @@
 <?php
 
-namespace Drupal\us_state_county_maps\Plugin\MapDefinition;
+namespace Drupal\congressional_districts_118\Plugin\MapDefinition;
 
 use Drupal\simple_interactive_maps\MapDefinitionPluginBase;
 
 /**
- * Implements US Map of states and territories.
+ * Congressional District Map.
  *
  * Generated from US Census Bureau Shapefiles on {{timestamp}}.
  *
@@ -15,7 +15,7 @@ use Drupal\simple_interactive_maps\MapDefinitionPluginBase;
  *   description = @Translation("{{map_description}}"),
  *   uses_default_tooltip = TRUE,
  *   default_tooltip = "@label",
- *   map_category = "US Census Bureau County Maps"
+ *   map_category = "US Census Bureau 118th Congressional District Maps"
  * )
  */
 
